fixed id issues